<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTxt"
        android:layout_alignTop="@id/calcularBTN"
        android:layout_toEndOf="@id/calcularBTN"
        android:layout_centerHorizontal="true"
        style="@style/title_purple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imc"
        android:textSize="40sp"
        android:visibility="visible" />

    <EditText
        android:id="@+id/pesoEDT"
        style="@style/input_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/peso_ex" />


    <EditText
        android:id="@+id/alturaEDT"
        style="@style/input_style"
        android:layout_alignEnd="@id/pesoEDT"
        android:layout_below="@id/pesoEDT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_alignStart="@id/pesoEDT"
        android:hint="@string/altura_cm"
        tools:visibility="visible"/>


    <Button
        android:id="@+id/calcularBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textSize="16sp" />

</RelativeLayout>